samples/_failures_safe/1761437255_9a561f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2facc410.c: In function ‘main’:
./samples/SAFE/__tmp_2facc410.c:151:9: error: expected declaration or statement at end of input
  151 |         fprintf(stderr, "Decompression failed\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_2facc410.c:151:9: error: expected declaration or statement at end of input
